<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_apply_leave"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_apply_leave" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_invite"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_invite" />
            <item
                android:id="@+id/nav_supervisor"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_supervisor" />
        </menu>
    </item>

</menu>
