<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="4">

    <EditText
        android:id="@+id/mobileno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_mobil"
        android:imeActionId="6"
        android:layout_gravity="center_horizontal"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="phone"
        android:maxLines="1"
        android:singleLine="true" />
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="3"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:orientation="vertical">-->

        <!--<TextView-->
            <!--android:id="@+id/status"-->
            <!--style="@style/ThemeOverlay.MyTextDetail"-->
            <!--android:text="@string/signed_out" />-->

        <!--<TextView-->
            <!--android:id="@+id/detail"-->
            <!--style="@style/ThemeOverlay.MyTextDetail"-->
            <!--tools:text="Firebase User ID: 123456789abc" />-->

    <!--</LinearLayout>-->

<include layout="@layout/activity_login" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/phoneAuthFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical"-->
                <!--android:weightSum="2.0">-->

                <!--<TextView-->
                    <!--android:id="@+id/fieldPhoneNumber"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="0dp"-->
                    <!--android:hint="@string/hint_phone_number"-->
                    <!--android:layout_weight="1.0"-->
<!--/>-->

                <!--<EditText-->
                    <!--android:id="@+id/fieldVerificationCode"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="0dp"-->
                    <!--android:hint="@string/hint_verification_code"-->
                    <!--android:layout_weight="1.0"-->
                    <!--android:inputType="number"/>-->

            <!--</LinearLayout>-->

            <LinearLayout
                android:id="@+id/verifyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2.0">

                <Button
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/buttonVerifyPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/verify_phone_auth"/>

                <Button
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/buttonResend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/resend_phone_auth"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signedInButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:weightSum="1.0">

            <Button
                android:id="@+id/signOutButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/sign_out"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>

